--- a/education-experience-1/the-complete-java-certification-course/index.html
+++ b/education-experience-1/the-complete-java-certification-course/index.html
@@ -12,8 +12,8 @@
   <link rel="dns-prefetch preconnect" href="https://cdn-cms-s.f-static.net" crossorigin="anonymous" />
   <link rel="dns-prefetch preconnect" href="https://static.s123-cdn-static.com" crossorigin="anonymous" />
   <link rel="dns-prefetch preconnect" href="https://static.s123-cdn.com" crossorigin="anonymous" /> <!-- Favicon -->
-  <link rel="shortcut icon" href="https://cdn-cms-s.f-static.net/manager/site123_website/files/logos/brand_files_2020/Icons/Png/Icon_blue.png?v=r7121" type="image/x-icon">
-  <link rel="icon" href="https://cdn-cms-s.f-static.net/manager/site123_website/files/logos/brand_files_2020/Icons/Png/Icon_blue.png?v=r7121" type="image/x-icon">
+  <link rel="shortcut icon" href="https://cdn1.pretoriusse.net/CDN/Images/raine.jpg" type="image/x-icon">
+  <link rel="icon" href="https://cdn1.pretoriusse.net/CDN/Images/raine.jpg" type="image/x-icon">
   <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=3996662&onlyContent=&tranW=&v=r7121_20974081&wd=raine.pretoriusse.net"><!-- Status Bar -->
   <meta name="apple-mobile-web-app-status-bar-style" content="default"><!-- 152px icon -->
   <link rel="apple-touch-icon" sizes="152x152" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=152&height=152&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081"><!-- 180px icon -->
