--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon" sizes="167x167" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=167&height=167&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081">
   <!-- Mobile Browser Address Bar Color -->
   <meta name="theme-color" content="#307672"> <!-- Regular Meta Info -->
-  <title class="s123-js-pjax">Raine Pretorius's CV</title>
+  <title class="s123-js-pjax">Raine Pretorius</title>
   <meta name="description" content="Raine Pretorius's CV - I Am Raine" class="s123-js-pjax">
   <meta name="keywords" content="Raine Pretorius CV" class="s123-js-pjax">
   <link rel="canonical" href="https://raine.pretoriusse.net/" class="s123-js-pjax" />
@@ -2151,6 +2151,10 @@
   </script><!-- JavaScript Translations Object -->
   <!-- CSS Minimize Bottom -->
   <link rel="stylesheet" class="defer-css" data-href="https://cdn-cms-s.f-static.net/versions/2/css/minimize-bottom.css?v=r7121" type="text/css" crossorigin="anonymous"> <!-- Minimize JS files -->
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p1.js?v=r7121" crossorigin="anonymous"></script>
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p2.js?v=r7121" crossorigin="anonymous"></script>
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p3.js?v=r7121" crossorigin="anonymous"></script>
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p4.js?v=r7121" crossorigin="anonymous"></script>
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/js.php?v=r7121&umk=3" crossorigin="anonymous"></script>
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_scripts.js?v=r7121" crossorigin="anonymous"></script> <!-- Website Statistics -->
   <script src="https://cdn-cms-s.f-static.net/versions/2/wizard/statistics/js/generateStats-min.js?v=r7121" crossorigin="anonymous"></script> <!-- Floating Magic Button Update Preview Helper -->
