--- a/my-skills/index.html
+++ b/my-skills/index.html
@@ -1889,6 +1889,10 @@
   </script><!-- JavaScript Translations Object -->
   <!-- CSS Minimize Bottom -->
   <link rel="stylesheet" class="defer-css" data-href="https://cdn-cms-s.f-static.net/versions/2/css/minimize-bottom.css?v=r7121" type="text/css" crossorigin="anonymous"> <!-- Minimize JS files -->
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p1.js?v=r7121" crossorigin="anonymous"></script>
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p2.js?v=r7121" crossorigin="anonymous"></script>
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p3.js?v=r7121" crossorigin="anonymous"></script>
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p4.js?v=r7121" crossorigin="anonymous"></script>
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/js.php?v=r7121&umk=3" crossorigin="anonymous"></script>
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_scripts.js?v=r7121" crossorigin="anonymous"></script> <!-- Website Statistics -->
   <script src="https://cdn-cms-s.f-static.net/versions/2/wizard/statistics/js/generateStats-min.js?v=r7121" crossorigin="anonymous"></script> <!-- Floating Magic Button Update Preview Helper -->
